[gd_scene format=3 uid="uid://doms5i30by1q3"]

[ext_resource type="Texture2D" uid="uid://cuhkwfqja0ybr" path="res://assets/sprites/brown_frame.png" id="1_nt7q6"]
[ext_resource type="Script" uid="uid://eoepblsconqg" path="res://scripts/description_label.gd" id="2_wm3ai"]
[ext_resource type="Script" uid="uid://cco4xe86ue268" path="res://scripts/player_buttons.gd" id="2_x4jx1"]
[ext_resource type="Script" uid="uid://d0hljcegjndgn" path="res://scripts/special_buttons.gd" id="3_yev5y"]
[ext_resource type="PackedScene" uid="uid://bwctbcsxclaw7" path="res://scenes/combat_action_button.tscn" id="4_cgfq5"]
[ext_resource type="Script" uid="uid://cj7y6dm1fo4m1" path="res://scripts/turn_count_label.gd" id="6_8dubc"]
[ext_resource type="Script" uid="uid://crkrtpl1g0ldh" path="res://scripts/flee_popup.gd" id="7_cgfq5"]
[ext_resource type="Script" uid="uid://bgo4guvlvtiee" path="res://scripts/end_screen.gd" id="7_ktti3"]
[ext_resource type="Texture2D" uid="uid://bs6cne2cmnuwn" path="res://assets/sprites/knight.png" id="7_p7vwb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xlq6p"]
bg_color = Color(0.21816888, 0.10165576, 3.6098065e-08, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nt7q6"]
bg_color = Color(0.087565444, 0.08756546, 0.087565444, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nt7q6"]
font_size = 40
font_color = Color(1, 0.7372549, 0, 1)
outline_size = 2
outline_color = Color(1, 1, 0.15294118, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7dvkv"]
font_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.85882354)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8dubc"]
bg_color = Color(0.19215687, 0.105882354, 0.039215688, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p7vwb"]
font_size = 40
font_color = Color(1, 1, 0.54901963, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cgfq5"]

[sub_resource type="LabelSettings" id="LabelSettings_ktti3"]
font_size = 22

[node name="UI" type="CanvasLayer" unique_id=1376955447]
layer = -1

[node name="Background" type="Panel" parent="." unique_id=1066489344]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xlq6p")

[node name="MiddleLine" type="Panel" parent="Background" unique_id=67409442]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nt7q6")

[node name="Frame" type="NinePatchRect" parent="Background" unique_id=303754039]
layout_mode = 0
offset_right = 576.0
offset_bottom = 324.0
scale = Vector2(2, 2)
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="LeftFrameContainer" type="AspectRatioContainer" parent="." unique_id=335175062]
offset_top = 129.0
offset_right = 577.0
offset_bottom = 449.0

[node name="LeftFrame" type="TextureRect" parent="LeftFrameContainer" unique_id=1960501715]
layout_mode = 2
texture = ExtResource("1_nt7q6")

[node name="RightFrameContainer" type="AspectRatioContainer" parent="." unique_id=976564762]
offset_left = 577.0
offset_top = 129.0
offset_right = 1154.0
offset_bottom = 449.0

[node name="RightFrame" type="TextureRect" parent="RightFrameContainer" unique_id=518303805]
layout_mode = 2
texture = ExtResource("1_nt7q6")

[node name="Description" type="Panel" parent="." unique_id=858782548]
offset_left = 706.0
offset_top = 481.0
offset_right = 1025.0
offset_bottom = 632.0

[node name="Label" type="RichTextLabel" parent="Description" unique_id=427506726]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.450348
offset_top = 4.0
offset_right = -8.450348
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_wm3ai")

[node name="Frame" type="NinePatchRect" parent="Description" unique_id=385068162]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="PlayerButtons" type="Control" parent="." unique_id=1554163923]
layout_mode = 3
anchors_preset = 0
offset_left = 19.0
offset_top = 492.0
offset_right = 449.0
offset_bottom = 582.0
script = ExtResource("2_x4jx1")

[node name="MainButtons" type="FlowContainer" parent="PlayerButtons" unique_id=482404210]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -90.0
offset_right = 430.0
offset_bottom = 1.0
grow_vertical = 0
theme_override_constants/h_separation = 10

[node name="FleeButton" type="Button" parent="PlayerButtons/MainButtons" unique_id=1684836385]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_colors/font_color = Color(0.8627451, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.8627451, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 1, 1)
theme_override_colors/font_hover_color = Color(0.8627451, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.8627451, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Flee"

[node name="ButtonFrame" type="NinePatchRect" parent="PlayerButtons/MainButtons/FleeButton" unique_id=1834351534]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerButtons/MainButtons" unique_id=1783534943]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainerTop" type="HBoxContainer" parent="PlayerButtons/MainButtons/VBoxContainer" unique_id=1221436348]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="AttackButton" parent="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerTop" unique_id=2106514306 instance=ExtResource("4_cgfq5")]
layout_mode = 2

[node name="HeavyHitButton" parent="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerTop" unique_id=1254640704 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Heavy Hit"

[node name="WaitButton" parent="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerTop" unique_id=2023004818 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Wait"

[node name="HBoxContainerBottom" type="HBoxContainer" parent="PlayerButtons/MainButtons/VBoxContainer" unique_id=81072897]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SpellsButton" type="Button" parent="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerBottom" unique_id=832292902]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.43137255, 0.8745098, 0.8745098, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Spells"

[node name="ButtonFrame" type="NinePatchRect" parent="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerBottom/SpellsButton" unique_id=1306061864]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="AbilitiesButton" type="Button" parent="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerBottom" unique_id=1904351791]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.43137255, 0.8745098, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Abilities"

[node name="ButtonFrame" type="NinePatchRect" parent="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerBottom/AbilitiesButton" unique_id=1463587011]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="ItemsButton" type="Button" parent="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerBottom" unique_id=1036772499]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.43137255, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Items"

[node name="ButtonFrame" type="NinePatchRect" parent="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerBottom/ItemsButton" unique_id=529433082]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="SpellsButtons" type="FlowContainer" parent="PlayerButtons" unique_id=1337411407]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -90.0
offset_right = 430.0
offset_bottom = 1.0
grow_vertical = 0
theme_override_constants/h_separation = 10
script = ExtResource("3_yev5y")

[node name="BackButton" type="Button" parent="PlayerButtons/SpellsButtons" unique_id=604767870]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="ButtonFrame" type="NinePatchRect" parent="PlayerButtons/SpellsButtons/BackButton" unique_id=1734796922]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerButtons/SpellsButtons" unique_id=841205950]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainerTop" type="HBoxContainer" parent="PlayerButtons/SpellsButtons/VBoxContainer" unique_id=1711571486]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="SpellButton1" parent="PlayerButtons/SpellsButtons/VBoxContainer/HBoxContainerTop" unique_id=1050280229 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Spell #1"

[node name="SpellButton2" parent="PlayerButtons/SpellsButtons/VBoxContainer/HBoxContainerTop" unique_id=828852315 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Spell #2"

[node name="SpellButton3" parent="PlayerButtons/SpellsButtons/VBoxContainer/HBoxContainerTop" unique_id=1245397742 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Spell #3"

[node name="HBoxContainerBottom" type="HBoxContainer" parent="PlayerButtons/SpellsButtons/VBoxContainer" unique_id=119376817]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="SpellButton4" parent="PlayerButtons/SpellsButtons/VBoxContainer/HBoxContainerBottom" unique_id=1742490417 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Spell #4"

[node name="SpellButton5" parent="PlayerButtons/SpellsButtons/VBoxContainer/HBoxContainerBottom" unique_id=1781435264 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Spell #5"

[node name="SpellButton6" parent="PlayerButtons/SpellsButtons/VBoxContainer/HBoxContainerBottom" unique_id=777900011 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Spell #6"

[node name="AbilitiesButtons" type="FlowContainer" parent="PlayerButtons" unique_id=2083994477]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -90.0
offset_right = 430.0
offset_bottom = 1.0
grow_vertical = 0
theme_override_constants/h_separation = 10
script = ExtResource("3_yev5y")

[node name="BackButton" type="Button" parent="PlayerButtons/AbilitiesButtons" unique_id=983139411]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="ButtonFrame" type="NinePatchRect" parent="PlayerButtons/AbilitiesButtons/BackButton" unique_id=477606953]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerButtons/AbilitiesButtons" unique_id=112599872]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainerTop" type="HBoxContainer" parent="PlayerButtons/AbilitiesButtons/VBoxContainer" unique_id=1097116211]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="AbilityButton1" parent="PlayerButtons/AbilitiesButtons/VBoxContainer/HBoxContainerTop" unique_id=1406873721 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Ability #1"

[node name="AbilityButton2" parent="PlayerButtons/AbilitiesButtons/VBoxContainer/HBoxContainerTop" unique_id=867991743 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Ability #2"

[node name="AbilityButton3" parent="PlayerButtons/AbilitiesButtons/VBoxContainer/HBoxContainerTop" unique_id=1885206996 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Ability #3"

[node name="HBoxContainerBottom" type="HBoxContainer" parent="PlayerButtons/AbilitiesButtons/VBoxContainer" unique_id=397953533]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="AbilityButton4" parent="PlayerButtons/AbilitiesButtons/VBoxContainer/HBoxContainerBottom" unique_id=752327032 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Ability #4"

[node name="AbilityButton5" parent="PlayerButtons/AbilitiesButtons/VBoxContainer/HBoxContainerBottom" unique_id=1444607998 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Ability #5"

[node name="AbilityButton6" parent="PlayerButtons/AbilitiesButtons/VBoxContainer/HBoxContainerBottom" unique_id=1676413428 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Ability #6"

[node name="ItemsButtons" type="FlowContainer" parent="PlayerButtons" unique_id=1125047260]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -90.0
offset_right = 430.0
offset_bottom = 1.0
grow_vertical = 0
theme_override_constants/h_separation = 10
script = ExtResource("3_yev5y")

[node name="BackButton" type="Button" parent="PlayerButtons/ItemsButtons" unique_id=1899926946]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="ButtonFrame" type="NinePatchRect" parent="PlayerButtons/ItemsButtons/BackButton" unique_id=1302963999]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerButtons/ItemsButtons" unique_id=1031269398]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainerTop" type="HBoxContainer" parent="PlayerButtons/ItemsButtons/VBoxContainer" unique_id=1523835044]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemButton1" parent="PlayerButtons/ItemsButtons/VBoxContainer/HBoxContainerTop" unique_id=699046802 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Item #1"

[node name="ItemButton2" parent="PlayerButtons/ItemsButtons/VBoxContainer/HBoxContainerTop" unique_id=1589396691 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Item #2"

[node name="ItemButton3" parent="PlayerButtons/ItemsButtons/VBoxContainer/HBoxContainerTop" unique_id=1880644841 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Item #3"

[node name="HBoxContainerBottom" type="HBoxContainer" parent="PlayerButtons/ItemsButtons/VBoxContainer" unique_id=143707720]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemButton4" parent="PlayerButtons/ItemsButtons/VBoxContainer/HBoxContainerBottom" unique_id=2054655060 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Item #4"

[node name="ItemButton5" parent="PlayerButtons/ItemsButtons/VBoxContainer/HBoxContainerBottom" unique_id=1303203966 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Item #5"

[node name="ItemButton6" parent="PlayerButtons/ItemsButtons/VBoxContainer/HBoxContainerBottom" unique_id=894350007 instance=ExtResource("4_cgfq5")]
layout_mode = 2
text = "Item #6"

[node name="TurnCountLabel" type="Label" parent="." unique_id=831987009]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -113.0
offset_right = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "Turn:
1"
label_settings = SubResource("LabelSettings_nt7q6")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_8dubc")

[node name="FleePopup" type="Panel" parent="." unique_id=2001495555]
visible = false
offset_left = 74.0
offset_top = 497.0
offset_right = 504.0
offset_bottom = 587.0
script = ExtResource("7_cgfq5")

[node name="FleeLabel" type="Label" parent="FleePopup" unique_id=1369155439]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 43.0
grow_horizontal = 2
text = "Are you sure you want to flee?"
label_settings = SubResource("LabelSettings_7dvkv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Frame" type="NinePatchRect" parent="FleePopup" unique_id=1608841259]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="FleePopup" unique_id=1463863628]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -141.0
offset_top = -50.0
offset_right = 141.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="YesButton" type="Button" parent="FleePopup/HBoxContainer" unique_id=1933058681]
custom_minimum_size = Vector2(90, 30)
layout_mode = 2
text = "Yes"

[node name="ButtonFrame" type="NinePatchRect" parent="FleePopup/HBoxContainer/YesButton" unique_id=1117842812]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="NoButton" type="Button" parent="FleePopup/HBoxContainer" unique_id=1737506925]
custom_minimum_size = Vector2(90, 30)
layout_mode = 2
text = "No"

[node name="ButtonFrame" type="NinePatchRect" parent="FleePopup/HBoxContainer/NoButton" unique_id=18598254]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="EndScreen" type="Panel" parent="." unique_id=298450436]
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8dubc")
script = ExtResource("7_ktti3")

[node name="Frame" type="NinePatchRect" parent="EndScreen" unique_id=323891054]
layout_mode = 0
offset_right = 576.0
offset_bottom = 324.0
scale = Vector2(2, 2)
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="ResultLabel" type="Label" parent="EndScreen" unique_id=828230821]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.5
offset_top = -213.0
offset_right = 269.5
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 2
text = "You have conquered your foe!"
label_settings = SubResource("LabelSettings_p7vwb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuoteLabel" type="RichTextLabel" parent="EndScreen" unique_id=532884020]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -147.0
offset_right = 151.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=20][i],,With great power comes great responsibility.\"[/i]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="EndScreen" unique_id=1040283599]
material = SubResource("CanvasItemMaterial_cgfq5")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -55.0
offset_right = 50.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"

[node name="ButtonFrame" type="NinePatchRect" parent="EndScreen/ContinueButton" unique_id=1626902926]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt7q6")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="GainedLabel" type="Label" parent="EndScreen" unique_id=1549247624]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 15.0
offset_right = 69.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
text = "You have gained:"
label_settings = SubResource("LabelSettings_ktti3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LootLabel" type="RichTextLabel" parent="EndScreen" unique_id=398534742]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = 47.0
offset_right = 462.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=18]+20 EXP,	+15 GOLD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSprite" type="TextureRect" parent="EndScreen" unique_id=1636798184]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 108.0
offset_right = -21.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
texture = ExtResource("7_p7vwb")

[connection signal="pressed" from="PlayerButtons/MainButtons/FleeButton" to="PlayerButtons" method="_on_flee_button_pressed"]
[connection signal="pressed" from="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerBottom/SpellsButton" to="PlayerButtons" method="_on_spells_button_pressed"]
[connection signal="pressed" from="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerBottom/AbilitiesButton" to="PlayerButtons" method="_on_abilities_button_pressed"]
[connection signal="pressed" from="PlayerButtons/MainButtons/VBoxContainer/HBoxContainerBottom/ItemsButton" to="PlayerButtons" method="_on_items_button_pressed"]
[connection signal="pressed" from="FleePopup/HBoxContainer/YesButton" to="FleePopup" method="_on_yes_button_pressed"]
[connection signal="pressed" from="FleePopup/HBoxContainer/NoButton" to="FleePopup" method="_on_no_button_pressed"]
[connection signal="pressed" from="EndScreen/ContinueButton" to="EndScreen" method="_on_continue_button_pressed"]
